[package]
name = "edit-xlsx"
license = "MIT"
description = "A quick and easy-to-use Rust library for Excel file editing."
homepage = "https://github.com/MortalreminderPT/edit-xlsx"
repository = "https://github.com/MortalreminderPT/edit-xlsx"
documentation = "https://docs.rs/edit-xlsx/latest/edit_xlsx"
keywords = ["excel", "xlsx", "writer", "editor"]
readme = "README.md"
version = "0.5.0"
edition = "2024"
exclude = ["tests/"]

[dependencies]
zip = { version="6.0", default-features=false, features=["deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
walkdir = "2.4.0"
futures = "0.3.30"
ansi_term = { version = "0.12", optional = true }

[features]
ansi_term_support = ["ansi_term"]
